<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--
    Aqui esta mi comentario EHVM
    -->

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_cancel_button" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_ok_button" />


    </LinearLayout>

    <TextView
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_registrar"
        android:gravity="end"
        android:onClick="btnRegistrar_click"
        />


</LinearLayout>
